--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -3,3 +3,22 @@ border-style:solid!important;
  border-width: 2px!important;
  border-color: black!important;
 }
+
+@media only screen and (max-width: 1868px){
+  .fontInBetween{
+  font-size: 25px;
+  }
+}
+
+@media only screen and (max-width: 1538px){
+  .fontInBetween{
+  font-size: 29px;
+  }
+}
+
+@media only screen and (max-width: 1193px){
+  .fontInBetween{
+  font-size: 31px;
+  margin: 0;
+  }
+}
