--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -4,6 +4,10 @@ border-style:solid!important;
  border-color: black!important;
 }
 
+.fontInBetween{
+  font-size: 2rem;
+}
+
 @media only screen and (max-width: 1270px){
   .titleFont{
   font-size: 35px;
