--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,3 +1,7 @@
+body {
+  margin: 0;
+}
+
 .border-2{
 border-style:solid!important;
  border-width: 2px!important;
@@ -7,6 +11,11 @@ border-style:solid!important;
 .login-gradient{
   height: 100vh;
   background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
+}
+
+.grade-table-background {
+  height: 100vh;
+  background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
 }
 
 .fontInBetween{
