--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -18,6 +18,10 @@ border-style:solid!important;
   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
 }
 
+.showError{
+  display: block;
+}
+
 .fontInBetween{
   font-size: 2rem;
 }
